auth-dialog.component: avoid height flickering, 'Captcha loading...' spinner

--- a/src/app/auth/components/auth-dialog/auth-dialog.component.scss
+++ b/src/app/auth/components/auth-dialog/auth-dialog.component.scss
@@ -5,6 +5,10 @@
         max-width: 460px;
     }
 
+    nb-card-body {
+        min-height: 120px;
+    }
+
     .nb-close {
         cursor: pointer;
     }
